--- a/.github/workflows/ogdroid.yml
+++ b/.github/workflows/ogdroid.yml
@@ -115,6 +115,6 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@main
         with:
-          name: HeavenlyHarmony-Android
+          name: HumanImposter-Android
           path: export/release/android/bin/app/build/outputs/apk/debug
           if-no-files-found: warn
