--- a/.github/workflows/ogdroid.yml
+++ b/.github/workflows/ogdroid.yml
@@ -48,7 +48,7 @@ jobs:
           haxelib install flixel 5.2.2
           haxelib install flixel-tools 1.5.1
           haxelib install flixel-ui 2.5.0
-          haxelib install flixel-addons 3.1.1
+          haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hxCodec
