--- a/.github/workflows/ogdroid.yml
+++ b/.github/workflows/ogdroid.yml
@@ -45,10 +45,10 @@ jobs:
           haxelib install hxcpp 4.2.1 > /dev/null --quiet
           haxelib install lime 7.9.0
           haxelib install openfl 9.1.0
-          haxelib install flixel 5.2.2
-          haxelib install flixel-tools 1.5.1
-          haxelib install flixel-ui 2.5.0
-          haxelib install flixel-addons
+          haxelib install flixel 4.11.0
+          haxelib install flixel-tools 
+          haxelib install flixel-ui 
+          haxelib install flixel-addons 2.11.0
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hxCodec
@@ -67,7 +67,8 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set flixel 5.2.2
+          haxelib set flixel-addons 2.11.0
+          haxelib set flixel 4.11.0
           haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
           haxelib set hxcpp 4.2.1
